--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MongoDB configuration
 quarkus.mongodb.connection-string=mongodb://localhost:27017
-quarkus.mongodb.database=notifications
+quarkus.mongodb.database=travel_agency
 
 # Kafka configuration
 kafka.bootstrap.servers=localhost:9092
